objects/Contact.object
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Phone_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Phone ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <validationRules>
        <fullName>Contact_must_be_in_Account_ZIP_Code</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(Account.Id)) , MailingPostalCode  &lt;&gt;  Account.ShippingPostalCode )</errorConditionFormula>
        <errorMessage>MailingPostalCode must be different from the account&apos;s shipping postal code</errorMessage>
    </validationRules>
</CustomObject>